[package]
name = "anidl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies"] }
colored = "2.1.0"
scraper = "0.19.0"
chrono = "0.4.38"
lazy_static = "1.4.0"
indicatif = "0.17.8"
mkv = "0.0.8"
