[package]
name = "gogoanime-scraper"
version = "1.1.3"
edition = "2021"
description = "A blazing fast anime scraper for GoGoAnime"
license = "MIT"
repository = "https://github.com/zerodev-exe/gogoanime"

[dependencies]
select = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies"] }
colored = "2.1.0"
scraper = "0.20.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
indicatif = "0.17.8"
async-trait = "0.1.82"
futures = "0.3.30"

[lib]
name = "gogoanime_scraper"
path = "src/lib.rs"

[[bin]]
name = "gogoanime_scraper"
path = "src/main.rs"
