[package]
name = "gogoanime-scraper"
version = "1.2.4"
edition = "2021"
description = "A blazing fast anime scraper for GoGoAnime"
license = "MIT"
repository = "https://github.com/zerodev-exe/gogoanime-scraper"

[dependencies]
select = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "blocking"] }
colored = "3.0.0"
scraper = "0.22.0"
chrono = "0.4.39"
lazy_static = "1.5.0"
indicatif = "0.17.9"
async-trait = "0.1.83"
futures = "0.3.30"
dirs = "5.0.1"

[lib]
name = "gogoanime_scraper"
path = "src/lib.rs"

[[bin]]
name = "anidl"
path = "src/main.rs"
